--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,16 +1,8 @@
-﻿@{
-    Layout = null;
+﻿
+@{
+    
+    Layout = "~/Views/Layouts/_LayoutB.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>Index111111111111111111111111111111111111111111111111111111111111111111111111111111111</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div> 
-    </div>
-</body>
-</html>
